# oedatamodel_api

./: .bumpversion.toml  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  fastapi_run.sh  production.yml  pyproject.toml  requirements.txt  setup.cfg
.envs/.local/: .fastapi
.github/ISSUE_TEMPLATE/: general_issue_template.md
files/: .gitignore
oedatamodel_api/: Dockerfile  databus.py  fix_oedatamodel.py  formatting.py  local_helper.py  mapping_custom.py  mapping_default.py  metadata.py  oep_connector.py  oep_metadata.py  package_docs.py  sedos_structure.py  settings.py  transform.py  upload.py  validation.py  webapp.py
oedatamodel_api/datamodel/: OEDataModel-concrete-datapackage.json  OEDataModel-normalization-datapackage.json  OEDataModel-output-normalization-datapackage.json
oedatamodel_api/mappings/: IAMC_aggregated_series.json  IAMC_map_year_series.json  IAMC_minimize.json  IAMC_names.json  RE_technologies.json  all_regions.json  dashboard.json  genesys2.json  grouped.json  minimize.json  normalize.json  normalize_example.json  normalize_output.json  oemof.json  oemofb3_minimize.json  oemofb3_names.json  oemofb3_to_oed_concrete.json  oemofb3_to_oed_normalize.json  original.json  parameters.json  regions.json  regions_urbs.json  table.json  technologies.json  technologies_and_types.json  technologies_reduced.json  technology.json  technology2.json  technology3.json  timeindex.json  timeseries.json  urbs.json  urbs2.json  urbs_2016.json  urbs_grouped.json  urbs_grouped_2.json  urbs_minimize.json  urbs_regions.json
oedatamodel_api/scripts/: multiple_csv_upload.py  multiple_databus_registration.py  multiple_upload.py
oedatamodel_api/sources/: example.json  modex.json  modex_by_name.json  modex_output.json  modex_output_by_name.json  modex_output_filters.json  oemofb3.json  simple.json
oedatamodel_api/static/: README.md  docs_current_mappings.json  docs_custom_mapping.json
oedatamodel_api/structure/: structure.csv  structure.json
oedatamodel_api/templates/: databus.html  index.html  metadata.html  oedatamodel.html  sedos_base.html  single_upload.html  structure.html
scripts/: README.md  data_OEP_registration.py  env_template  environ_setup.py  iamc_preprocessing.py  multiple_OEP_registration.py  multiple_csv_upload.py  multiple_databus_registration.py
tests/: test_databus.py  test_fix_oedatamodel.py  test_mapping.py  test_requirements.txt  test_sources.py  test_upload.py
tests/mappings/: chain.json  filter.json  old.json  select.json  select_old.json
tests/mappings/subproject/: select.json
tests/sources/: multiple_sources.json  simple_source.json
tests/test_data/: invalid_json.csv  metadata.json  valid_json.csv
tutorial/: create_oed.py  delete_oed.py
tutorial/metadata/: example_oemetadata_for_oed.json
