[tool.poetry]
name = "oedatamodel_api"
version = "0.1.0"
description = "API to connect OEP with MODEX frameworks"
authors = ["Hendrik Huyskens <hendrik.huyskens@rl-institut.de>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
jinja2 = "^2.11.2"
uvicorn = "^0.12.0"
aiofiles = "^0.5.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
flakehell = "^0.6.1"
pytest = "^6.1.0"
mccabe = "^0.6.1"
pylint = "^2.6.0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.2.3"
darglint = "^1.5.4"
flake8-eradicate = "^0.4.0"
flake8-isort = "^4.0.0"
flake8-mutable = "^1.2.0"
flake8-pytest-style = "^1.3.0"
flake8-spellcheck = "^0.19.0"
pep8-naming = "^0.11.1"

[tool.flakehell]
exclude = ["meta/migrations/", "docs/"]
max-line-length = 100

[tool.flakehell.plugins]
flake8-bandit = ["+*", "-S322"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-darglint = ["+*"]
flake8-docstrings = ["+*"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest-style = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]
pylint = ["+*"]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

