[tool.poetry]
name = "oedatamodel_api"
version = "0.1.0"
description = "API to connect OEP with MODEX frameworks"
authors = ["Hendrik Huyskens <hendrik.huyskens@rl-institut.de>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
jinja2 = "^2.11.2"
uvicorn = "^0.12.0"
aiofiles = "^0.5.0"
requests = "^2.24.0"
jmespath = "^0.10.0"
gunicorn = "^20.0.4"
oem2orm = {git = "https://github.com/henhuy/oem2orm.git", rev = "console_script"}
pandas = "^1.1.3"
xlrd = "^1.2.0"
parse = "^1.18.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
flakehell = "^0.6.1"
pytest = "^6.1.0"
mccabe = "^0.6.1"
pylint = "^2.6.0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.2.3"
darglint = "^1.5.4"
flake8-eradicate = "^0.4.0"
flake8-isort = "^4.0.0"
flake8-mutable = "^1.2.0"
flake8-pytest-style = "^1.3.0"
pep8-naming = "^0.11.1"
pytest-sugar = "^0.9.4"

[tool.flakehell]
exclude = ["docs/"]
format='colored'
max_line_length = 120
max-line-length = 120

[tool.flakehell.plugins]
'flake8-*' = ['+*']
flake8-spellcheck = ["-*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]
pylint = ["+*"]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

