[tool.poetry]
name = "oedatamodel_api"
version = "0.17.1"
description = "API to connect OEP with MODEX frameworks"
authors = ["Hendrik Huyskens <hendrik.huyskens@rl-institut.de>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.12.0"
aiofiles = "^0.5.0"
requests = "^2.24.0"
jmespath = "^0.10.0"
gunicorn = "^20.0.4"
oem2orm = {git = "https://github.com/OpenEnergyPlatform/oem2orm.git", rev = "feature/upload_metadata_for_single_table"}
pandas = "^1.1.3"
xlrd = "^1.2.0"
parse = "^1.18.0"
python-multipart = "^0.0.5"
frictionless = "^5.0.0"
redis = "^3.5.3"
Jinja2 = "^3.1.2"
databusclient = "0.12"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
pytest = "^6.1.0"
mccabe = "^0.6.1"
pylint = "^2.6.0"
bandit = "1.7.2"
flake8-bandit = "2.1.2"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.2.3"
darglint = "^1.5.4"
flake8-eradicate = "^0.4.0"
flake8-isort = "^4.0.0"
flake8-mutable = "^1.2.0"
flake8-pytest-style = "^1.3.0"
pep8-naming = "^0.11.1"
pytest-sugar = "^0.9.4"
add-trailing-comma = "^2.2.3"
black = "21.12.b0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
